--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:numColumns="4"
-            android:id="@+id/gameTable"/>
+            android:id="@+id/gameTable"
+            android:clickable="true"/>
     </GridLayout>
 
     <LinearLayout
